# hspot-lite-llm

./: 0.13.0  README.md  pyproject.toml
docs/: detection_rules.md  quickstart.md
hallucination-spotter/: .gitignore  pyproject.toml
hallucination-spotter/docs/: detection_rules.md  quickstart.md
hallucination-spotter/src/hallucinator/: __init__.py  utils.py
requirements/: dev.txt  prod.txt
scripts/: benchmark.py
src/hallucinator/: cli.py  core.py
tests/: test_cli.py  test_core.py
