[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hallucination-spotter"
version = "0.1.0"
description = "Local hallucination detection for LLM outputs"
readme = "README.md"
authors = [
    {name = "hydev", email = "hamidrezaywork@gmail.com"},
]
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "spacy>=3.7.4,<4.0.0",
    "datefinder>=0.7.1,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/hydev-a/hallucination-spotter"

[tool.setuptools]
packages = ["hallucinator"]
package-dir = {"" = "src"}
include-package-data = true

[project.scripts]
hspot = "hallucinator.cli:main"